<resources>
    <string name="app_name">Blood Pressure Readings</string>
    <array name="familyMember">
        <item>father@home.com</item>
        <item>mother@home.com</item>
        <item>grandma@home.com</item>
        <item>grandpa@home.com</item>
    </array>
    <string name="select_title">Select a Family Member</string>
    <string name="date">Date: </string>
    <string name="systolic_prompt">Enter a Systolic Reading</string>
    <string name="my_systolic">My Systolic Reading</string>
    <string name="systolic_reading">Systolic Reading: </string>
    <string name="diastolic_reading">Diastolic Reading: </string>
    <string name="condition">Condition: </string>
    <string name="diastolic_prompt">Enter a Diastolic Reading</string>
    <string name="my_diastolic">My Diastolic Reading</string>
    <string name="addButt">Add</string>
    <string name="warning_title">Warning</string>
    <string name="warning">This person is in the Hypertensive Crisis Range, immediate action must be taken.</string>
    <string name="back_butt">Back</string>
    <string name="update">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="our_names">Animesh Kaushal, Noah MacRitchie, Amber Ma</string>
    <string name="systolic">\"Systolic \"</string>
    <string name="noReadingsFound">"No readings found for this family member this month"</string>
</resources>